Corrected the image source for github

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 </head>
 <body>
     <div class="topc">
-        <img class="topcld" src="images\cloud.png" alt="cloud">
+        <img class="topcld" src="cloud.png" alt="cloud">
         <h1>I'm prajwal</h1>
         <h2 class="desc">a <span class="pro">pro</span>grammer.</h2> 
     
-        <img class="botcld" src="images\cloud.png" alt="cloud">
-        <img src="images\mountain.png" alt="mountain"><br>
+        <img class="botcld" src="cloud.png" alt="cloud">
+        <img src="mountain.png" alt="mountain"><br>
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="pfp" src="images\PrajPic-modified.png" alt="Profile Pic">
+          <img class="pfp" src="PrajPic-modified.png" alt="Profile Pic">
          
           <p class="fresh">freshman at rvce, bangalore. <br> dabbling in the world of tech.</p>
         </div>
@@ -30,12 +30,12 @@
         <div class="skills">
           <h2>my skills.</h2>
           <div class="skill-row">
-            <img class="comp" src="images\monitor.png" alt="">
+            <img class="comp" src="monitor.png" alt="">
             <h3>(programming) languages</h3>
             <p class="lp">I code in c, c++, python, html & css. <br>I speak marathi, english, kannada, hindi, tamil and elementary french.</p>
           </div>
           <div class="sr2">
-            <img class="sports" src="images\sports.jpg" alt="">
+            <img class="sports" src="sports.jpg" alt="">
             <h3>sports</h3>
             <p class="sp">u-16 zonal level cricket player. <br>black-belt (2nd dan) in taekwondo.</p>
           </div>
