updated gmail link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h2 class="git">get in touch.</h2>
           <p>down for a convo on history, <a class="jr" href="https://www.joerogan.com/">joe rogan</a>, f1, <a class="mb" href="https://tse2.mm.bing.net/th?id=OIP.so1-G4EfotUw7v0W4EL5tQHaEo&pid=Api&P=0" target="_blank">monica bellucci</a>, algorithmic trading, geopolitics...</p>
           <br>
-          <a class="btn" href="mailto:prajpawar23@email.com">let's connect</a><br> 
+          <a class="btn" href="mailto:prajpawar23@gmail.com">let's connect</a><br> 
         </div>
       </div>
       
